--- a/index.html
+++ b/index.html
@@ -33,5 +33,17 @@
         </div>
       </div>
     </div>
+    <div class="hero">
+      <div class="hero__text">
+        <div class="hero__title">Hello there , Get to know me</div>
+        <div class="hero__title1">Kamolluk Seaaung</div>
+        <div class="hero__title2">
+          Grade 12 Student at Ratwinit Bangkaeo School
+        </div>
+      </div>
+      <div class="hero__image">
+        <img src="/assets/2.jpg" alt="" />
+      </div>
+    </div>
   </body>
 </html>
