--- a/index.html
+++ b/index.html
@@ -45,5 +45,11 @@
         <img src="/assets/2.jpg" alt="" />
       </div>
     </div>
+    <script>
+      const addClass = () => {
+        const navbar = document.getElementById("navbar");
+        navbar.classList.toggle("expand");
+      };
+    </script>
   </body>
 </html>
