--- a/html/certificate.html
+++ b/html/certificate.html
@@ -10,5 +10,28 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <div class="navbar" id="navbar">
+      <div class="navbar__logo">
+        <img src="../assets/logo.png" alt="" />
+      </div>
+      <div class="navbar__bar" onclick="addClass()">
+        <i class="fas fa-bars"></i>
+      </div>
+      <div class="navbar__lists">
+        <div class="lists">
+          <a href="../index.html">Home</a>
+        </div>
+        <div class="lists">
+          <a href="activity.html">Activity</a>
+        </div>
+        <div class="lists">
+          <a href="certificate.html">Certificate</a>
+        </div>
+        <div class="lists">
+          <a href="contact.html">Contact</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
