--- a/html/certificate.html
+++ b/html/certificate.html
@@ -33,5 +33,159 @@
         </div>
       </div>
     </div>
+    <div class="character">
+      <div class="character__text">
+        <div class="character__title">My Certificate</div>
+      </div>
+      <div class="character__card__container">
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/ศิลปากร.jpg" alt="" />
+          </div>
+          <div class="character__btn1">มหาวิทยาลัยศิลปากร</div>
+          <div class="character__btn2">
+            เข้าค่ายอัจฉริยภาพวิศวศิลปากรได้ระดับดีมาก
+            หลักสูตรวิศวกรรมศาสตรบัณฑิต
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/คนดี.jpg" alt="" />
+          </div>
+          <div class="character__btn1">โรงเรียนราชวินิตบางแก้ว</div>
+          <div class="character__btn2">
+            รางวัลเกียรติบัตรคนดีศรีราชวินิตบางเเก้ว รางวัลประเภท
+            ผลงานทางวิชาการประจำปี 2562
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/เข็มคนดี.jpg" alt="" />
+          </div>
+          <div class="character__btn1">โรงเรียนราชวินิตบางแก้ว</div>
+          <div class="character__btn2">
+            รางวัลเข็มคนดีศรีราชวินิตบางเเก้ว รางวัลประเภท
+            ผลงานทางวิชาการประจำปี 2562
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/มธ.jpg" alt="" />
+          </div>
+          <div class="character__btn1">มหาวิทยาลัยธรรมศาสตร์และอพวช.</div>
+          <div class="character__btn2">
+            เข้าร่วมการแข่งขันตอบปัญหาวิทยาศาสตร์ประจำปี 2564
+            ระดับมัธยมศึกษาตอนปลายของภาคกลาง
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/เปิดบ้าน.jpg" alt="" />
+          </div>
+          <div class="character__btn1">
+            สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง
+          </div>
+          <div class="character__btn2">
+            เข้าร่วมกิจกรรม OPEN ACADEMIC WORLD OF ENGINEERING 2020
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/ระบบสมองกล.jpg" alt="" />
+          </div>
+          <div class="character__btn1">
+            Institute Education Progress Increment
+          </div>
+          <div class="character__btn2">
+            การอบรมเชิงปฎิบัติการระบบสมองกลฝังตัวด้วยบอร์ด Arduino
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/แข่งตอบรร..jpg" alt="" />
+          </div>
+          <div class="character__btn1">โรงเรียนราชวินิตบางแก้ว</div>
+          <div class="character__btn2">
+            รางวัลชนะเลิศ การแข่งขันตอบปัญหาทางวิทยาศาสตร์
+            ระดับชั้นมัธยมศึกษาปีที่ 5
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/68.jpg" alt="" />
+          </div>
+          <div class="character__btn1">สถาบันการจัดการปัญญาภิวัฒน์</div>
+          <div class="character__btn2">
+            การอบรมโครงการ PIM Global Company Visit Program ครั้งที่ 68
+            ด้านวิศวกรรมคอมพิวเตอร์
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/243.jpg" alt="" />
+          </div>
+          <div class="character__btn1">สถาบันการจัดการปัญญาภิวัฒน์</div>
+          <div class="character__btn2">
+            การอบรมโครงการ PIM Young Creative Program ครั้งที่ 243 ตอน "Digital
+            & Engineering Camp"
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/264.jpg" alt="" />
+          </div>
+          <div class="character__btn1">สถาบันการจัดการปัญญาภิวัฒน์</div>
+          <div class="character__btn2">
+            การอบรมโครงการ PIM Young Creative Program ครั้งที่ 264 ตอน Power of
+            Digital & Technology ด้านวิศวกรรมคอมพิวเตอร์
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/276.jpg" alt="" />
+          </div>
+          <div class="character__btn1">สถาบันการจัดการปัญญาภิวัฒน์</div>
+          <div class="character__btn2">
+            การอบรมโครงการ PIM Young Creative Program ครั้งที่ 276 ตอน Info
+            graphic Design ด้านวิศวกรรม
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/282.jpg" alt="" />
+          </div>
+          <div class="character__btn1">สถาบันการจัดการปัญญาภิวัฒน์</div>
+          <div class="character__btn2">
+            การอบรมโครงการ PIM Young Creative Program ครั้งที่ 282 ตอน
+            ก่อ-ร่าง-สร้าง วิศวกรหุ่นยนต์
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/html.jpg" alt="" />
+          </div>
+          <div class="character__btn1">ThaiMOOC</div>
+          <div class="character__btn2">
+            ผ่านการเรียนออนไลน์ การสร้างหน้าเว็บเบื้องต้นด้วย HTML และ CSS
+          </div>
+        </div>
+        <div class="character__card">
+          <div class="character__img">
+            <img src="../assets/หุ่นยนตร์.jpg" alt="" />
+          </div>
+          <div class="character__btn1">ThaiMOOC</div>
+          <div class="character__btn2">
+            ผ่านการเรียนออนไลน์
+            หุ่นยนต์เคลื่อนที่ขนาดเล็กควบคุมด้วยไมโครคอนโทรลเลอร์
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>
+      const addClass = () => {
+        const navbar = document.getElementById("navbar");
+        navbar.classList.toggle("expand");
+      };
+    </script>
   </body>
 </html>
