--- a/index.html
+++ b/index.html
@@ -10,28 +10,5 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
-    <div class="navbar" id="navbar">
-      <div class="navbar__logo">
-        <img src="/assets/logo.png" alt="" />
-      </div>
-      <div class="navbar__bar" onclick="addClass()">
-        <i class="fas fa-bars"></i>
-      </div>
-      <div class="navbar__lists">
-        <div class="lists">
-          <a href="index.html">Home</a>
-        </div>
-        <div class="lists">
-          <a href="/html/activity.html">Activity</a>
-        </div>
-        <div class="lists">
-          <a href="/html/certificate.html">Certificate</a>
-        </div>
-        <div class="lists">
-          <a href="/html/contact.html ">Contact</a>
-        </div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
