--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container"></div>
+  </body>
 </html>
