--- a/index.html
+++ b/index.html
@@ -10,7 +10,5 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
-    <div class="container"></div>
-  </body>
+  <body></body>
 </html>
