--- a/html/profile.html
+++ b/html/profile.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <script
-      src="https://kit.fontawesome.com/cff67f5b89.js"
-      crossorigin="anonymous"
-    ></script>
+    <title>Portfolio Profile</title>
   </head>
   <body></body>
 </html>
