--- a/html/profile.html
+++ b/html/profile.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Profile</title>
+    <script
+      src="https://kit.fontawesome.com/cff67f5b89.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body></body>
 </html>
