--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <div class="navbar">
+      <div class="navbar__logo">
+        <img src="/asset/logo.png" alt="" />
+      </div>
+    </div>
+  </body>
 </html>
