--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <title>Portfolio Home</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="icon" href="/asset/iconlogo.jpg" />
-    <script
-      src="https://kit.fontawesome.com/cff67f5b89.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <div class="navbar">
       <div class="navbar__logo">
         <img src="/asset/logo.png" alt="" />
       </div>
+      <div class="navbar__lists"></div>
     </div>
   </body>
 </html>
