--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <div class="navbar__logo">
         <img src="/asset/logo.png" alt="" />
       </div>
-      <div class="navbar__lists"></div>
+      <div class="navbar__lists">
+        <div class="lists"></div>
+      </div>
     </div>
   </body>
 </html>
