--- a/index.html
+++ b/index.html
@@ -13,8 +13,36 @@
       <div class="navbar__logo">
         <img src="/asset/logo.png" alt="" />
       </div>
-      <div class="navbar__lists">
-        <div class="lists"></div>
+    </div>
+    <div class="container__lists">
+      <div class="titlel__ists">
+        <div class="title">HOME</div>
+      </div>
+      <div class="card__lists">
+        <div class="card">
+          <div class="lists__img">
+            <img src="/asset/profile-user.png" alt="" />
+          </div>
+          <div class="list__btn">
+            <div class="list">Profile</div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="lists__img">
+            <img src="/asset/activity.png" alt="" />
+          </div>
+          <div class="list__btn">
+            <div class="list">Activity</div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="lists__img">
+            <img src="/asset/certificate.png" alt="" />
+          </div>
+          <div class="list__btn">
+            <div class="list">Certificate</div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
