--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="container__lists">
-      <div class="titlel__ists">
+      <div class="title__lists">
         <div class="title">HOME</div>
       </div>
       <div class="card__lists">
@@ -24,7 +24,7 @@
             <img src="/asset/profile-user.png" alt="" />
           </div>
           <div class="list__btn">
-            <div class="list">Profile</div>
+            <div class="lists">Profile</div>
           </div>
         </div>
         <div class="card">
@@ -32,7 +32,7 @@
             <img src="/asset/activity.png" alt="" />
           </div>
           <div class="list__btn">
-            <div class="list">Activity</div>
+            <div class="lists">Activity</div>
           </div>
         </div>
         <div class="card">
@@ -40,7 +40,7 @@
             <img src="/asset/certificate.png" alt="" />
           </div>
           <div class="list__btn">
-            <div class="list">Certificate</div>
+            <div class="lists">Certificate</div>
           </div>
         </div>
       </div>
