--- a/index.html
+++ b/index.html
@@ -16,31 +16,39 @@
     </div>
     <div class="container__lists">
       <div class="title__lists">
-        <div class="title">HOME</div>
+        <div class="title">
+          <a href="index.html">HOME</a>
+        </div>
       </div>
       <div class="card__lists">
         <div class="card">
           <div class="lists__img">
-            <img src="/asset/profile-user.png" alt="" />
+            <img src="/asset/profile-removebg-preview.png" alt="" />
           </div>
-          <div class="list__btn">
-            <div class="lists">Profile</div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="lists__img">
-            <img src="/asset/activity.png" alt="" />
-          </div>
-          <div class="list__btn">
-            <div class="lists">Activity</div>
+          <div class="lists__btn">
+            <div class="lists">
+              <a href="/html/profile.html">Profile</a>
+            </div>
           </div>
         </div>
         <div class="card">
           <div class="lists__img">
-            <img src="/asset/certificate.png" alt="" />
+            <img src="/asset/activity-removebg-preview.png" alt="" />
           </div>
-          <div class="list__btn">
-            <div class="lists">Certificate</div>
+          <div class="lists__btn">
+            <div class="lists">
+              <a href="/html/activity.html">Activity</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="lists__img">
+            <img src="/asset/certificate-removebg-preview.png" alt="" />
+          </div>
+          <div class="lists__btn">
+            <div class="lists">
+              <a href="/html/certificate.html">Certificate</a>
+            </div>
           </div>
         </div>
       </div>
