--- a/html/profile.html
+++ b/html/profile.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Profile</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="icon" href="../asset/iconlogo.jpg" />
     <script
       src="https://kit.fontawesome.com/cff67f5b89.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="navbar">
+      <div class="navbar__logo">
+        <img src="../asset/logo.png" alt="" />
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+  </body>
 </html>
