--- a/html/certificate.html
+++ b/html/certificate.html
@@ -10,5 +10,34 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <div class="navbar2" id="navbar">
+      <div class="navbar2__logo">
+        <img src="../asset/logo.png" alt="" />
+      </div>
+      <div class="navbar2__bar" onclick="addClass()">
+        <i class="fas fa-bars"></i>
+      </div>
+      <div class="navbar2__lists">
+        <div class="lists2">
+          <a href="../index.html">Home</a>
+        </div>
+        <div class="lists2">
+          <a href="profile.html">Profile</a>
+        </div>
+        <div class="lists2">
+          <a href="activity.html">Activity</a>
+        </div>
+        <div class="lists2">
+          <a href="certificate.html">Certificate</a>
+        </div>
+      </div>
+    </div>
+    <script>
+      const addClass = () => {
+        const navbar = document.getElementById("navbar");
+        navbar.classList.toggle("expand");
+      };
+    </script>
+  </body>
 </html>
