--- a/html/certificate.html
+++ b/html/certificate.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Certificate</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="icon" href="../asset/iconlogo.jpg" />
     <script
       src="https://kit.fontawesome.com/cff67f5b89.js"
       crossorigin="anonymous"
