--- a/html/profile.html
+++ b/html/profile.html
@@ -35,6 +35,15 @@
         </div>
       </div>
     </div>
+    <div class="profile">
+      <div class="profile__text">
+        <div class="text1">Hello there , Get to know me</div>
+        <div class="text2">Kamolluk Seaaung</div>
+      </div>
+      <div class="profile__img">
+        <img src="../asset/Me.jpg" alt="" />
+      </div>
+    </div>
     <script>
       const addClass = () => {
         const navbar = document.getElementById("navbar");
