--- a/html/profile.html
+++ b/html/profile.html
@@ -39,9 +39,15 @@
       <div class="profile__text">
         <div class="text1">Hello there , Get to know me</div>
         <div class="text2">Kamolluk Seaaung</div>
+        <div class="text3">Grade 12 Student at Ratwinit Bangkaeo School</div>
       </div>
       <div class="profile__img">
         <img src="../asset/Me.jpg" alt="" />
+      </div>
+    </div>
+    <div class="canva">
+      <div class="canva__img">
+        <img src="../asset/canva-removebg-preview.png" alt="" />
       </div>
     </div>
     <script>
