--- a/html/activity.html
+++ b/html/activity.html
@@ -39,6 +39,7 @@
         </div>
       </div>
     </div>
+    <div class="activity"></div>
     <script>
       const addClass = () => {
         const navbar = document.getElementById("navbar");
