--- a/html/certificate.html
+++ b/html/certificate.html
@@ -11,6 +11,10 @@
       src="https://kit.fontawesome.com/cff67f5b89.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
+    />
   </head>
   <body>
     <div class="navbar2" id="navbar">
@@ -41,5 +45,6 @@
         navbar.classList.toggle("expand");
       };
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
   </body>
 </html>
