--- a/html/profile.html
+++ b/html/profile.html
@@ -47,7 +47,7 @@
     </div>
     <div class="canva">
       <div class="canva__img">
-        <img src="../asset/p-removebg-preview.png" alt="" />
+        <img src="../asset/canva-removebg-preview (1).png" alt="" />
       </div>
     </div>
     <script>
