--- a/html/activity.html
+++ b/html/activity.html
@@ -39,7 +39,12 @@
         </div>
       </div>
     </div>
-    <div class="activity"></div>
+    <div class="activity">
+      <div class="activity__text">
+        <div class="activity__title">My Activity</div>
+        <img src="" alt="" />
+      </div>
+    </div>
     <script>
       const addClass = () => {
         const navbar = document.getElementById("navbar");
