--- a/html/activity.html
+++ b/html/activity.html
@@ -44,6 +44,12 @@
         <div class="activity__title">My Activity</div>
         <img src="" alt="" />
       </div>
+      <div class="activity__card__container">
+        <div class="activity__card">
+          <div class="activity__img"></div>
+          <div class="activity__btn"></div>
+        </div>
+      </div>
     </div>
     <script>
       const addClass = () => {
