--- a/html/activity.html
+++ b/html/activity.html
@@ -46,8 +46,12 @@
       </div>
       <div class="activity__card__container">
         <div class="activity__card">
-          <div class="activity__img"></div>
-          <div class="activity__btn"></div>
+          <div class="activity__img">
+            <img src="" alt="" />
+          </div>
+          <div class="activity__btn">
+            <div class="activity__btn1"></div>
+          </div>
         </div>
       </div>
     </div>
