--- a/html/activity.html
+++ b/html/activity.html
@@ -51,6 +51,7 @@
           </div>
           <div class="activity__btn">
             <div class="activity__btn1"></div>
+            <div class="activity__btn2"></div>
           </div>
         </div>
       </div>
