--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
         </div>
         <div class="card">
           <div class="lists__img">
-            <img src="/asset/activity-removebg-preview.png" alt="" />
-          </div>
-          <div class="lists__btn">
-            <div class="lists">
-              <a href="/html/activity.html">Activity</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="lists__img">
             <img src="/asset/certificate-removebg-preview.png" alt="" />
           </div>
           <div class="lists__btn">
             <div class="lists">
               <a href="/html/certificate.html">Certificate</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="lists__img">
+            <img src="/asset/activity-removebg-preview.png" alt="" />
+          </div>
+          <div class="lists__btn">
+            <div class="lists">
+              <a href="/html/contact.html">Contact</a>
             </div>
           </div>
         </div>
