--- a/html/certificate.html
+++ b/html/certificate.html
@@ -32,10 +32,10 @@
           <a href="profile.html">Profile</a>
         </div>
         <div class="lists2">
-          <a href="activity.html">Activity</a>
+          <a href="certificate.html">Certificate</a>
         </div>
         <div class="lists2">
-          <a href="certificate.html">Certificate</a>
+          <a href="contact.html">Contact</a>
         </div>
       </div>
     </div>
