--- a/html/certificate.html
+++ b/html/certificate.html
@@ -39,6 +39,234 @@
         </div>
       </div>
     </div>
+    <div class="certificate">
+      <div class="certificate__title">My Certificate</div>
+      <div class="certificate__title1">
+        เกียรติบัตรการเเข่งขัน เเละการเข้าร่วมกิจกรรม
+      </div>
+      <div class="certificate__card">
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/com.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/com.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">KMITL</div>
+          <div class="certificate__btn">
+            K-Engineering World Workshop 2021 วิศวกรรมคอมพิวเตอร์
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/IOT.png"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/IOT.png" width="300" height="220" />
+          </a>
+          <div class="certificate__text">KMITL</div>
+
+          <div class="certificate__btn">
+            K-Engineering World Workshop 2021 วิศวกรรมระบบไอโอทีและสารสนเทศ
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/ศิลปากร.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/ศิลปากร.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">KU</div>
+          <div class="certificate__btn">
+            เข้าค่ายอัจฉริยภาพวิศวศิลปากรได้ระดับดีมาก
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/คนดี.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/คนดี.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">Ratwinit Banghaeo School</div>
+          <div class="certificate__btn">
+            รางวัลเกียรติบัตรคนดีศรีราชวินิตบางเเก้ว
+            ประเภทผลงานทางวิชาการประจำปี 2562
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/มธ.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/มธ.jpg" width="300" height="380" />
+          </a>
+          <div class="certificate__text">
+            กิจกรรมวิทยาศาสตร์สำหรับเยาวชนศูนย์ภาคกลาง
+          </div>
+          <div class="certificate__btn">
+            เข้าร่วมการแข่งขันตอบปัญหาวิทยาศาสตร์ประจำปี 2564
+            ระดับมัธยมตอนปลายของภาคกลาง
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/เปิดบ้าน.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/เปิดบ้าน.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">KMITL</div>
+          <div class="certificate__btn">
+            เข้าร่วมกิจกรรม OPEN ACADEMIC WORLD OF ENGINEERING 2020
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/ระบบสมองกล.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/ระบบสมองกล.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">
+            Institute Education Progress Increment
+          </div>
+          <div class="certificate__btn">
+            การอบรมเชิงปฎิบัติการระบบสมองกลฝังตัวด้วยบอร์ด Arduino
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/แข่งตอบรร..jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/แข่งตอบรร..jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">Ratwinit Bangkaeo School</div>
+          <div class="certificate__btn">
+            รางวัลชนะเลิศ การแข่งขันตอบปัญหาทางวิทยาศาสตร์
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/ค่ายราชวินิต.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/ค่ายราชวินิต.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">Ratwinit Bangkaeo School</div>
+          <div class="certificate__btn">เข้าร่วมค่ายบูรณาการภาษาอังกฤษ</div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/ค่ายราชวินิตเชียงใหม่.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img
+              src="../asset/ค่ายราชวินิตเชียงใหม่.jpg"
+              width="300"
+              height="220"
+            />
+          </a>
+          <div class="certificate__text">Ratwinit Bangkaeo School</div>
+          <div class="certificate__btn">
+            เข้าร่วมค่ายบูรณาการวิทยาศาสตร์และคณิตศาสตร์
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/thai.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/thai.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">ThaiMOOC</div>
+          <div class="certificate__btn">
+            เรียนรู้ออนไลน์การสร้างหน้าเว็บเบื้องต้นด้วย HTML และ CSS
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/python.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/python.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">ThaiMOOC</div>
+          <div class="certificate__btn">
+            โปรแกรม Python สำหรับการคำนวณทางวิทยาศาสตร์
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/243.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/243.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">PIM</div>
+          <div class="certificate__btn">
+            PIM Young Creative Program ตอน "Digital & Engineering Camp"
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/68.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/68.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">PIM</div>
+          <div class="certificate__btn">
+            PIM Global Company Visit Program ด้านวิศวกรรมคอมพิวเตอร์
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/264.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/264.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">PIM</div>
+          <div class="certificate__btn">
+            PIM Young Creative Program ตอน Power of Digital & Technology
+            ด้านวิศวกรรมคอมพิวเตอร์
+          </div>
+        </div>
+      </div>
+    </div>
     <script>
       const addClass = () => {
         const navbar = document.getElementById("navbar");
