--- a/html/activity.html
+++ b/html/activity.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Profile</title>
+    <title>Portfolio Certificate</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="icon" href="../asset/iconlogo.jpg" />
     <script
       src="https://kit.fontawesome.com/cff67f5b89.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
+    />
   </head>
   <body>
     <div class="navbar2" id="navbar">
@@ -38,26 +42,13 @@
         </div>
       </div>
     </div>
-    <div class="profile">
-      <div class="profile__text">
-        <div class="text1">Hello there , Get to know me</div>
-        <div class="text2">Kamolluk Seaaung</div>
-        <div class="text3">Grade 12 Student at Ratwinit Bangkaeo School</div>
-      </div>
-      <div class="profile__img">
-        <img src="../asset/Me.jpg" alt="" />
-      </div>
-    </div>
-    <div class="canva">
-      <div class="canva__img">
-        <img src="../asset/canva-removebg-preview (1).png" alt="" />
-      </div>
-    </div>
+    <div class="activity"></div>
     <script>
       const addClass = () => {
         const navbar = document.getElementById("navbar");
         navbar.classList.toggle("expand");
       };
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
   </body>
 </html>
