--- a/html/certificate.html
+++ b/html/certificate.html
@@ -32,6 +32,9 @@
           <a href="profile.html">Profile</a>
         </div>
         <div class="lists2">
+          <a href="activity.html">Activity</a>
+        </div>
+        <div class="lists2">
           <a href="certificate.html">Certificate</a>
         </div>
         <div class="lists2">
