--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
         </div>
         <div class="card">
           <div class="lists__img">
+            <img src="/asset/act-removebg-preview.png" alt="" />
+          </div>
+          <div class="lists__btn">
+            <div class="lists">
+              <a href="/html/activity.html">Activity</a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="lists__img">
             <img src="/asset/certificate-removebg-preview.png" alt="" />
           </div>
           <div class="lists__btn">
