--- a/html/contact.html
+++ b/html/contact.html
@@ -28,6 +28,9 @@
           <a href="profile.html">Profile</a>
         </div>
         <div class="lists2">
+          <a href="activity.html">Activity</a>
+        </div>
+        <div class="lists2">
           <a href="certificate.html">Certificate</a>
         </div>
         <div class="lists2">
