--- a/html/activity.html
+++ b/html/activity.html
@@ -42,7 +42,26 @@
         </div>
       </div>
     </div>
-    <div class="activity"></div>
+    <div class="activity">
+      <div class="activity__title">My Activity</div>
+      <div class="activity__title1">การเข้าร่วมทำกิจกรรมต่างๆ</div>
+      <div class="activity__card">
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/com.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/com.jpg" width="300" height="220" />
+          </a>
+          <div class="acvitity__text">KMITL</div>
+          <div class="activity__btn">
+            K-Engineering World Workshop 2021 วิศวกรรมคอมพิวเตอร์
+          </div>
+        </div>
+      </div>
+    </div>
     <script>
       const addClass = () => {
         const navbar = document.getElementById("navbar");
