--- a/html/activity.html
+++ b/html/activity.html
@@ -49,16 +49,168 @@
         <div class="activity__box">
           <a
             data-fancybox="asset"
-            data-src="../asset/com.jpg"
+            data-src="../asset/mou2.jpg"
             data-width="640"
             data-height="360"
           >
-            <img src="../asset/com.jpg" width="300" height="220" />
+            <img src="../asset/mou2.jpg" width="300" height="210" />
           </a>
-          <div class="acvitity__text">KMITL</div>
+          <div class="activity__text">KMITL</div>
           <div class="activity__btn">
-            K-Engineering World Workshop 2021 วิศวกรรมคอมพิวเตอร์
+            เข้าร่วมกิจกรรมการลงนาม MOU ร่วมกับคณะวิศวกรรมศาสตร์
           </div>
+        </div>
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/สู่เกียร์.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/สู่เกียร์.jpg" width="300" height="200" />
+          </a>
+          <div class="activity__text">KMITL</div>
+          <div class="activity__btn">
+            เข้าร่วมกิจกรรมสู่เกียร์ภาควิศวกรรมคอมพิวเตอร์
+          </div>
+        </div>
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/ไอโอที.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/ไอโอที.jpg" width="300" height="200" />
+          </a>
+          <div class="activity__text">KMITL</div>
+          <div class="activity__btn">
+            เข้าร่วมกิจกรรม K-Engineering World Workshop 2021
+          </div>
+        </div>
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/งานค่ายลาด.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/งานค่ายลาด.jpg" width="300" height="210" />
+          </a>
+          <div class="activity__text">Ratwinit Bangkaeo School</div>
+          <div class="activity__btn">เข้าร่วมกิจกรรมคณะวิทยาศาสตร์ (KMITL)</div>
+        </div>
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/งานกลุ่มค่าย.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/งานกลุ่มค่าย.jpg" width="300" height="210" />
+          </a>
+          <div class="activity__text">Ratwinit Bangkaeo School</div>
+          <div class="activity__btn">
+            เข้าร่วมค่ายบูรณาการวิทยาศาสตร์และคณิตศาสตร์ จ.จันทบุรี
+          </div>
+        </div>
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/เชียงใหม่.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/เชียงใหม่.jpg" width="300" height="210" />
+          </a>
+          <div class="activity__text">Ratwinit Bangkaeo School</div>
+          <div class="activity__btn">
+            เข้าร่วมค่ายบูรณาการวิทยาศาสตร์และคณิตศาสตร์ จ.เชียงใหม่
+          </div>
+        </div>
+
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/ระบบฝังตัว.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/ระบบฝังตัว.jpg" width="300" height="330" />
+          </a>
+          <div class="activity__text">
+            Institute Education Progress Increment
+          </div>
+          <div class="activity__btn">
+            เข้าร่วมการอบรมเชิงปฎิบัติการระบบสมองกลฝังตัวด้วยบอร์ด Arduino
+          </div>
+        </div>
+
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/pim1.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/pim1.jpg" width="300" height="210" />
+          </a>
+          <div class="activity__text">PIM</div>
+          <div class="activity__btn">
+            เข้าร่วมกิจกรรม PIM Young Creative Program
+          </div>
+        </div>
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/rwb.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/rwb.jpg" width="300" height="380" />
+          </a>
+          <div class="activity__text">Ratwinit Bangkaeo School</div>
+          <div class="activity__btn">
+            เข้าร่วมกิจกรรมการแข่งขันตอบปัญหาวิทยาศาสตร์
+          </div>
+        </div>
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/กระจกเงา.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/กระจกเงา.jpg" width="300" height="210" />
+          </a>
+          <div class="activity__text">มูลนิธิกระจกเงา</div>
+          <div class="activity__btn">เข้าร่วมเป็นอาสาสมัครมูลนิธิกระจกเงา</div>
+        </div>
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/กีฬาสี.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/กีฬาสี.jpg" width="300" height="210" />
+          </a>
+          <div class="activity__text">Ratwinit Bangkaeo School</div>
+          <div class="activity__btn">
+            ฝึกซ้อมในการแข่งเต้นแอโรบิคงานกีฬาประเพณีประดู่แดงเกมส์
+          </div>
+        </div>
+        <div class="activity__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/เข้าค่ายที่วัด.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/เข้าค่ายที่วัด.jpg" width="300" height="210" />
+          </a>
+          <div class="activity__text">วัดเขาวัง</div>
+          <div class="activity__btn">เข้าค่ายคุณธรรมจริยธรรม</div>
         </div>
       </div>
     </div>
