--- a/html/certificate.html
+++ b/html/certificate.html
@@ -170,6 +170,33 @@
         <div class="certificate__box">
           <a
             data-fancybox="asset"
+            data-src="../asset/ภาคสถิติ.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/ภาคสถิติ.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">KMITL</div>
+          <div class="certificate__btn">
+            เข้าร่วมกิจกรรม Hands-on Google Data Studio for covid-19 MAP
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/KMUTT.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/KMUTT.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">KMUTT</div>
+          <div class="certificate__btn">เข้าร่วมกิจกรรม Science Exhibition</div>
+        </div>
+
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
             data-src="../asset/ค่ายราชวินิต.jpg"
             data-width="640"
             data-height="360"
@@ -266,6 +293,20 @@
           <div class="certificate__btn">
             PIM Young Creative Program ตอน Power of Digital & Technology
             ด้านวิศวกรรมคอมพิวเตอร์
+          </div>
+        </div>
+        <div class="certificate__box">
+          <a
+            data-fancybox="asset"
+            data-src="../asset/มูลนิธิกระจกเงา.jpg"
+            data-width="640"
+            data-height="360"
+          >
+            <img src="../asset/มูลนิธิกระจกเงา.jpg" width="300" height="220" />
+          </a>
+          <div class="certificate__text">มูลนิธิกระจกเงา</div>
+          <div class="certificate__btn">
+            เข้าร่วมเป็นอาสาสมัครมูลนิธิกระจกเงา
           </div>
         </div>
       </div>
